# 0tj84t5d8vmd63

./: README.md
cheribsd/contrib/: REMOVED_FOR_SPACE.md
de10pro-cheri-bgas/: DE10Pro-cheri-bgas.qpf  DE10Pro-cheri-bgas.qsf  DE10Pro-cheri-bgas.sdc  DE10Pro-cheri-bgas.v  DE10Pro-pin-assignments.qsf  Makefile  README.adoc  ddrb_channel.stp  de10pro-instructions.adoc  de10pro-interact.py  h2f_lw.stp  seriallite3_wrapper.qsys
de10pro-cheri-bgas/bluespec/: AXILiteSimRecipe.bsv  CHERI_BGAS_Router.bsv  CHERI_BGAS_System.bsv  CHERI_BGAS_Top.bsv  CHERI_BGAS_Top_Sim.bsv  CHERI_BGAS_Top_verilator_sim.cpp  Makefile  NonPipelinedMath.bsv  README.adoc  SoC_Map.bsv
de10pro-cheri-bgas/de10pro-seriallite3/: DE10_Pro.original_qsf  DE10_Pro.qsf  DE10_Pro.qws  DE10_Pro.sdc  DE10_Pro.v  DE10_Pro.v.bak  LICENSE  Makefile  README.md  chipid.ip  soc.qsys  swm_rx_adapter.v  swm_rx_adapter_hw.tcl  swm_rx_adapter_single_lane.v  swm_tx_adapter.v  swm_tx_adapter_hw.tcl  swm_tx_adapter_single_lane.v
de10pro-cheri-bgas/de10pro-seriallite3/vipbundle/: vipbundle.cabal
de10pro-cheri-bgas/de10pro-seriallite3/vipbundle/src/: VIPBundle.hs
de10pro-cheri-bgas/de10pro-seriallite3/vipbundle/src/VIPBundle/: InterfaceInference.hs  Pretty_QUARTUS_IP_TCL.hs
de10pro-cheri-bgas/ip/: reset_release.ip
de10pro-cheri-bgas/software/: DE10Pro-software-build.py  build_socfpga_stratix10_de10_pro.dtb.sh  (+4 more)
iocap-impls/: Cargo.toml  Justfile  README.md  pyproject.toml
iocap-impls/hardware/: REMOVED_FOR_SPACE.md
iocap-impls/libccap/: CMakeLists.txt  Justfile  generate_bitfield.py
iocap-impls/libccap/include/: libccap.h
iocap-impls/libccap/src_cmdline/: main.cpp
iocap-impls/libccap/vendor-split/libccap-0.6.2/src/: libccap.c  libccap_platform.incl.c
iocap-impls/libccap/vendor-split/libccap-0.6.3/src/: libccap_bitfields.incl.c
iocap-impls/libccap/vendor-split/libccaps-0.6.0/include/: libccap.h
iocap-impls/libccap/vendor-split/libccaps-0.6.0/src/: libccap.c  libccap_bitfields.incl.c  libccap_platform.incl.c
iocap-impls/libccap/vendor-split/libccaps-0.6.1/src/: libccap_platform.incl.c
iocap-impls/python/: BaseLengthExploration.ipynb  Formats.ipynb  PCIeTraceAnalysis.ipynb  cap2024_02_decoder_test.py  cap2024_11_decoder_test.py  fmt_viz.py  perfect_unredundancy.py
iocap-impls/python/key_allocation/: ExposureSlack.ipynb  exposure_slack_sims.py  exposure_slack_sims_2.py
iocap-impls/python/libfmtviz/: bits.py  range_fmt.py  render_html.py  util.py
iocap-impls/rust_caps/: Cargo.toml
iocap-impls/rust_caps/src/: capability.rs  checked_bits.rs  crypto.rs  lib.rs  util.rs
iocap-impls/rust_caps/src/capability/: v1.rs  v2024.rs  v2024_02.rs  v2024_11.rs
iocap-impls/rust_caps/src/capability/v1/: test.rs
iocap-impls/rust_caps/src/capability/v2024/: perms.rs  rand.rs
iocap-impls/rust_caps/src/capability/v2024_02/: cavs.rs  rand.rs  test.rs
iocap-impls/rust_caps/src/capability/v2024_11/: cavs.rs  rand.rs  test.rs
iocap-impls/rust_caps/src/crypto/: openssl.rs
iocap-impls/rust_caps/src/crypto/handrolled/: aes.rs  galois.rs  mod.rs
iocap-impls/rust_caps_c/: Cargo.toml  Justfile  build.rs  cbindgen.toml
iocap-impls/rust_caps_c/src/: lib.rs
iocap-impls/rust_caps_testgen/: Cargo.toml
iocap-impls/rust_caps_testgen/src/: lib.rs
iocap-impls/tests_cap2024_02/: exhibition_validallcavs_caps.memh  exhibition_validallcavs_secrets.memh  valid_decode_valid_sig_0cav.txt  valid_decode_valid_sig_1cav.txt  valid_decode_valid_sig_2cav.txt  valid_decode_valid_sig_all.txt  valid_sig_all_edge_cases.txt
iocap-impls/tests_cap2024_11/: valid_decode_valid_sig_all.txt  valid_sig_all_edge_cases.txt  valid_sig_only_edge_cases.txt
iocap-impls/viz_html/: test_cap.html
tinyemu-virtio/: README.md
(+591 files in other folders)
