[project]
name = "crypto-cap-experiments"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "jupyterlab>=4.3.6",
    "matplotlib>=3.10.1",
    "pandas>=2.2.3",
    "pyyaml>=6.0.2",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "mypy>=1.15.0",
]
