[package]
name = "rust_caps_testgen"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "gen_rand_csv"

[[bin]]
name = "run_tests"

[dependencies]
rust_caps = { path = "../rust_caps", features = ["std"]}
rand = "0.8.5"
serde = { version = "1.0", features = ["derive"] }
serde_with = { version = "3.7.0", features = ["hex"] }
csv = "1.3.0"
clap = { version = "4.5.4", features = ["derive"] }
assert_hex = "0.2.2"
dbg_hex = "0.1.1"